--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,21 +1,24 @@
 .App {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* full screen height */
+  min-height: 100vh;
+  /* full screen height */
 }
 
 .main-content {
-  flex: 1; /* grow to fill remaining space so footer goes down */
+  flex: 1;
+  /* grow to fill remaining space so footer goes down */
 }
 
 /* Footer CSS */
 .footer {
   padding: 30px 160px;
-  background-color: #e4e4e4;
+  background-color: linear-gradient(2deg, #ff9900 10%, rgba(255, 153, 0, 0.15) 50%, transparent 95%);
   display: flex;
   flex-direction: column;
   gap: 50px;
-  margin-top: auto; /* sticks footer to bottom */
+  margin-top: auto;
+  /* sticks footer to bottom */
 }
 
 /* Example footer inner container */
@@ -26,7 +29,9 @@
   padding-top: 50px;
 }
 
-.footer_left, .footer_content, .footer_right {
+.footer_left,
+.footer_content,
+.footer_right {
   display: flex;
   flex-direction: column;
   gap: 20px;
