--- a/Frontend/src/common/Footer.css
+++ b/Frontend/src/common/Footer.css
@@ -1,9 +1,8 @@
 .footer {
-    margin-left: 7%;
-    margin-right: 7%;
+
   padding: 30px 160px;
-  background-color: #e4e4e4;
-  margin-top: auto ;
+  background: linear-gradient(2deg, #ff9900 10%, rgba(255, 153, 0, 0.15) 50%, transparent 95%);
+  margin-top: auto;
   display: flex;
   flex-direction: column;
   gap: 100px;
@@ -267,18 +266,23 @@
   .footer {
     padding: 50px 60px;
   }
+
   .footer__container {
     grid-template-columns: repeat(2, 1fr);
   }
+
   .footer_left {
     gap: 10px;
   }
+
   .footer_content {
     gap: 20px;
   }
+
   .footer_right {
     gap: 20px;
   }
+
   .paymentIconContainer {
     width: 200px;
   }
@@ -296,27 +300,34 @@
     padding: 20px 15px;
     gap: 30px;
   }
+
   .footer__container {
     grid-template-columns: 1fr;
     gap: 30px;
   }
+
   .footer_left {
     gap: 10px;
   }
+
   .footer_content {
     gap: 20px;
   }
+
   .footer_right {
     gap: 20px;
   }
+
   .paymentIconContainer {
     width: 150px;
   }
+
   .footer_bottom {
     flex-direction: column;
     align-items: flex-start;
     gap: 15px;
   }
+
   .footerLangCurrency {
     gap: 10px;
   }
@@ -327,6 +338,7 @@
     width: 100%;
   }
 }
+
 .payment-methods {
   display: flex;
   gap: 8px;
